// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AudioPlayer /> audio riproducibile 1`] = `
<div>
  <Button
    actioncolor=""
    disabled={false}
    onClick={[Function]}
    round={true}
    theme={
      Object {
        "brand": "#00BBEF",
        "fonts": Object {
          "buttons": Object {
            "fontFamily": "inherit",
            "fontWeight": "inherit",
          },
        },
        "radius": Object {
          "buttons": "6px",
        },
      }
    }
    width="42px"
  >
    <Button__Icon
      height="18px"
      path={
        <g>
          <polygon
            points="6 15 2.69 11.53 0 11.53 0 6.47 2.69 6.47 6 3 6 15"
          />
          <path
            d="M8.93,13.72a7.89,7.89,0,0,0,0-9.34L8,5.09a6.62,6.62,0,0,1,1.3,4A6.59,6.59,0,0,1,8,13l1,.72Z"
          />
          <path
            d="M12,15.85A11.49,11.49,0,0,0,12,2.19L11,2.9a10.3,10.3,0,0,1,2,6.12,10.27,10.27,0,0,1-2,6.11l1,.72Z"
          />
          <path
            d="M14.1.72a14,14,0,0,1,0,16.56l1,.72a15.25,15.25,0,0,0,0-18l-1,.72Z"
          />
        </g>
      }
      theme={
        Object {
          "brand": "#00BBEF",
        }
      }
      viewBox="0 0 18 18"
      width="18px"
    />
  </Button>
</div>
`;

exports[`<AudioPlayer /> locked 1`] = `
<div>
  <Button
    actioncolor=""
    disabled={true}
    onClick={null}
    round={true}
    theme={
      Object {
        "brand": "#00BBEF",
        "fonts": Object {
          "buttons": Object {
            "fontFamily": "inherit",
            "fontWeight": "inherit",
          },
        },
        "radius": Object {
          "buttons": "6px",
        },
      }
    }
    width="42px"
  >
    <Button__Icon
      height="18px"
      path={
        <g>
          <path
            d="M6 15l-3.31-3.47H0V6.47h2.69L6 3v12z"
            fillRule="evenodd"
          />
          <path
            d="M17.35 5.35l-.7-.7L13 8.29 9.35 4.65l-.7.7L12.29 9l-3.64 3.65.7.7L13 9.71l3.65 3.64.7-.7L13.71 9l3.64-3.65z"
          />
        </g>
      }
      theme={
        Object {
          "brand": "#00BBEF",
        }
      }
      viewBox="0 0 18 18"
      width="18px"
    />
  </Button>
</div>
`;

exports[`<AudioPlayer /> paused 1`] = `
<div>
  <Button
    actioncolor=""
    disabled={false}
    onClick={[Function]}
    round={true}
    theme={
      Object {
        "brand": "#00BBEF",
        "fonts": Object {
          "buttons": Object {
            "fontFamily": "inherit",
            "fontWeight": "inherit",
          },
        },
        "radius": Object {
          "buttons": "6px",
        },
      }
    }
    width="42px"
  >
    <Button__Icon
      height="18px"
      path={
        <path
          d="M4 .2L15 9 4 17.8V.2z"
        />
      }
      theme={
        Object {
          "brand": "#00BBEF",
        }
      }
      viewBox="0 0 18 18"
      width="18px"
    />
  </Button>
</div>
`;

exports[`<AudioPlayer /> playing && !disablePause 1`] = `
<div>
  <Button
    actioncolor=""
    disabled={false}
    onClick={[Function]}
    round={true}
    theme={
      Object {
        "brand": "#00BBEF",
        "fonts": Object {
          "buttons": Object {
            "fontFamily": "inherit",
            "fontWeight": "inherit",
          },
        },
        "radius": Object {
          "buttons": "6px",
        },
      }
    }
    width="42px"
  >
    <Button__Icon
      height="18px"
      path={
        <path
          d="M3 0h5v18H3zM10 0h5v18h-5z"
        />
      }
      theme={
        Object {
          "brand": "#00BBEF",
        }
      }
      viewBox="0 0 18 18"
      width="18px"
    />
  </Button>
</div>
`;

exports[`<AudioPlayer /> playing && disablePause 1`] = `
<div>
  <Button
    actioncolor=""
    disabled={false}
    onClick={null}
    round={true}
    theme={
      Object {
        "brand": "#00BBEF",
        "fonts": Object {
          "buttons": Object {
            "fontFamily": "inherit",
            "fontWeight": "inherit",
          },
        },
        "radius": Object {
          "buttons": "6px",
        },
      }
    }
    width="42px"
  >
    <Button__Icon
      height="18px"
      path={
        <g>
          <polygon
            points="6 15 2.69 11.53 0 11.53 0 6.47 2.69 6.47 6 3 6 15"
          />
          <path
            d="M8.93,13.72a7.89,7.89,0,0,0,0-9.34L8,5.09a6.62,6.62,0,0,1,1.3,4A6.59,6.59,0,0,1,8,13l1,.72Z"
          />
          <path
            d="M12,15.85A11.49,11.49,0,0,0,12,2.19L11,2.9a10.3,10.3,0,0,1,2,6.12,10.27,10.27,0,0,1-2,6.11l1,.72Z"
          />
          <path
            d="M14.1.72a14,14,0,0,1,0,16.56l1,.72a15.25,15.25,0,0,0,0-18l-1,.72Z"
          />
        </g>
      }
      theme={
        Object {
          "brand": "#00BBEF",
        }
      }
      viewBox="0 0 18 18"
      width="18px"
    />
  </Button>
</div>
`;
